--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "tinymce": "^7.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@tinymce/tinymce-react": "^5.0.1",
     "@types/react-helmet": "^6.1.11"
   }
 }
